--- a/CoffeeGrammer/index.html
+++ b/CoffeeGrammer/index.html
@@ -39,7 +39,7 @@
             "Seperti secangkir kopi yang memberi semangat di pagi hari,<br />
             ngoding memberi warna pada setiap harinya"
           </blockquote>
-          <a href="#" class="button">buy one now</a>
+          <a href="#menu" class="button">buy one now</a>
         </div>
       </div>
     </section>
