--- a/CoffeeGrammer/index.html
+++ b/CoffeeGrammer/index.html
@@ -39,7 +39,7 @@
             "Seperti secangkir kopi yang memberi semangat di pagi hari,<br />
             ngoding memberi warna pada setiap harinya"
           </blockquote>
-          <a href="#menu" class="button">buy one now</a>
+          <a href="#booking" class="button">Booking Now!</a>
         </div>
       </div>
     </section>
@@ -75,7 +75,7 @@
       <h1 class="heading">our menu <span>popular menu</span></h1>
 
       <div class="box-menu">
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-1.png" alt="Menu 1" />
           <div class="content">
             <h3>JavaBeans Brew</h3>
@@ -89,7 +89,7 @@
           </div>
         </a>
 
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-2.png" alt="Menu 2" />
           <div class="content">
             <h3>Python Mocha</h3>
@@ -103,7 +103,7 @@
           </div>
         </a>
 
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-3.png" alt="Menu 3" />
           <div class="content">
             <h3>Ruby Roast</h3>
@@ -116,7 +116,7 @@
           </div>
         </a>
 
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-4.png" alt="Menu 4" />
           <div class="content">
             <h3>C Sharp Espresso</h3>
@@ -130,7 +130,7 @@
           </div>
         </a>
 
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-5.png" alt="Menu 5" />
           <div class="content">
             <h3>HTML5 Hazelnut</h3>
@@ -144,7 +144,7 @@
           </div>
         </a>
 
-        <a href="#" class="box">
+        <a href="#booking" class="box">
           <img src="image/Menu-img/menu-6.png" alt="Menu 6" />
           <div class="content">
             <h3>CSS Caramel Crunch</h3>
@@ -165,13 +165,38 @@
       <h1 class="heading">booking <span>reserve a table</span></h1>
 
       <form action="php/process_reservation.php" method="POST">
-        <input type="text" name="name" placeholder="Name" class="box" required />
-        <input type="email" name="email" placeholder="Email" class="box" required />
-        <input type="number" name="number" placeholder="Phone Number" class="box" required />
+        <input
+          type="text"
+          name="name"
+          placeholder="Name"
+          class="box"
+          required
+        />
+        <input
+          type="email"
+          name="email"
+          placeholder="Email"
+          class="box"
+          required
+        />
+        <input
+          type="number"
+          name="number"
+          placeholder="Phone Number"
+          class="box"
+          required
+        />
         <input type="date" name="date" class="box" required />
-        <textarea name="message" placeholder="Message" class="box" id="" cols="30" rows="10"></textarea>
+        <textarea
+          name="message"
+          placeholder="Message"
+          class="box"
+          id=""
+          cols="30"
+          rows="10"
+        ></textarea>
         <input type="submit" value="send message" class="button" />
-      </form>    
+      </form>
     </section>
 
     <!-- FOOTER -->
